fix: hover for mobile and breadcrumb, size, wrap

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 body {
   font-family: 'Mulish', sans-serif;
   color: #333333;
+  background-color: #F5FAFE;
 }
 
 .container {
@@ -415,6 +416,11 @@ template {
   line-height: 18px;
 }
 
+.navbar-menu__link:hover {
+  -webkit-filter: brightness(80%);
+          filter: brightness(80%);
+}
+
 .logo {
   width: 177px;
 }
@@ -454,6 +460,11 @@ template {
   cursor: pointer;
 }
 
+.search__button:hover {
+  -webkit-filter: brightness(80%);
+          filter: brightness(80%);
+}
+
 .user {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -477,6 +488,127 @@ template {
   line-height: 18px;
   margin-left: 18px;
   color: #333333;
+}
+
+.breadcrumb-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 18px 0;
+  margin: 0;
+  list-style: none;
+}
+
+.breadcrumb-list__item {
+  font-size: 10px;
+  line-height: 13px;
+}
+
+.breadcrumb-list__item:not(:last-child)::after {
+  content: '/';
+  margin-right: 4px;
+}
+
+.breadcrumb-list__link {
+  text-decoration: none;
+  color: #333333;
+}
+
+.breadcrumb-list__link:hover {
+  text-decoration: underline;
+}
+
+.hotel {
+  padding-top: 23px;
+  padding-bottom: 70px;
+}
+
+.hotel-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.hotel-info__offer {
+  margin-left: 14px;
+  margin-top: 4px;
+}
+
+.hotel-info__name {
+  margin-top: 4px;
+  margin-bottom: 0;
+}
+
+.hotel-info__description {
+  margin: 5px 0;
+}
+
+.hotel-name {
+  font-size: 24px;
+  line-height: 30px;
+}
+
+.hotel-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.hotel-description {
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.stars {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+}
+
+.offer {
+  font-size: 10px;
+  line-height: 13px;
+  padding: 4px 9px;
+  background-color: #EC1F46;
+  border-radius: 3px;
+  color: #ffffff;
+}
+
+.rating {
+  max-width: 65px;
+  min-height: 45px;
+  text-align: center;
+  color: #ffffff;
+  background-color: #EC1F46;
+  border-radius: 4px;
+}
+
+.rating__text {
+  font-size: 8px;
+  line-height: 10px;
+}
+
+.rating__counter {
+  font-size: 14px;
+  line-height: 18px;
+}
+
+.rating__counter-small {
+  font-size: 10px;
+  line-height: 12px;
 }
 
 @media (max-width: 1200px) {
@@ -509,6 +641,20 @@ template {
   }
   .search__input {
     width: 340px;
+  }
+}
+
+@media (max-width: 800px) {
+  .navbar-menu__link:hover {
+    -webkit-filter: brightness(100%);
+            filter: brightness(100%);
+  }
+  .search__button:hover {
+    -webkit-filter: brightness(100%);
+            filter: brightness(100%);
+  }
+  .breadcrumb-list__link:hover {
+    text-decoration: none;
   }
 }
 
@@ -546,11 +692,46 @@ template {
     height: 1px;
     background-color: #333333;
   }
+  .stars {
+    -ms-flex-preferred-size: auto;
+        flex-basis: auto;
+  }
+  .hotel-name {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+  .hotel-wrapper {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .hotel-info__text {
+    width: 100%;
+  }
+  .hotel-info__name {
+    margin-top: 10px;
+  }
+  .hotel-info__rating {
+    display: none;
+  }
+  .hotel-info__offer {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+    margin-left: 0;
+  }
 }
 
 @media (max-width: 576px) {
   .logo {
     width: 99px;
+  }
+}
+
+@media (max-width: 422px) {
+  .hotel-info__description-wrap:before {
+    content: "\A";
+    white-space: pre;
   }
 }
 /*# sourceMappingURL=style.css.map */
