--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -22,6 +22,22 @@
     .search
         &__input
             width: 340px
+@media (max-width:800px)
+    .navbar
+        &-menu
+            &__link
+                &:hover       
+                    filter: brightness(100%)
+    .search
+        &__button
+            &:hover
+                filter: brightness(100%)
+    .breadcrumb
+        &-list
+            &__link
+                &:hover
+                    text-decoration: none
+
 @media ( max-width: 768px )
     .container
         max-width: 576px
@@ -29,6 +45,7 @@
     .navbar
         &__search,&-menu, &__user
             display: none
+        
     .menu
         &-button
             display: flex
@@ -45,7 +62,31 @@
                 width: 16px
                 height: 1px
                 background-color: $text-color
-
+    .stars
+        flex-basis: auto
+    .hotel
+        &-name
+            flex-basis: 100%
+        &-wrapper
+            justify-content: space-between
+        &-info
+            &__text
+                width: 100%
+            &__name
+                margin-top: 10px
+            &__rating
+                display: none
+            &__offer
+                order: -1
+                margin-left: 0
 @media (max-width:576px)
     .logo
         width: 99px
+
+@media (max-width:422px)
+    .hotel
+        &-info
+            &__description
+                &-wrap:before
+                    content: "\A"
+                    white-space: pre
