--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -27,7 +27,9 @@
             text-decoration: none
             text-transform: uppercase
             font-size: 14px
-            line-height: 18px
+            line-height: 18px    
+            &:hover
+                filter: brightness(80%)
 .logo
     width: 177px
 .search
@@ -57,6 +59,8 @@
         background-color: $primary
         outline: none
         cursor: pointer
+        &:hover
+            filter: brightness(80%)
 .user
     display: flex
     align-items: center
